--- a/package.json
+++ b/package.json
@@ -1,17 +1,40 @@
 {
-  "name": "trying_stuff",
-  "version": "1.0.0",
-  "description": "my first serious use of nodeJS",
-  "main": "Lnode.js",
+  "name": "0x01",
+  "version": "0.0.1",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "l": "nodemon Lnode.js",
-    "server": "nodemon server.js"
+    "dev": "vite dev --host",
+    "build": "vite build",
+    "preview": "vite preview",
+    "lint": "prettier --check . && eslint .",
+    "format": "prettier --write ."
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "devDependencies": {
+    "@sveltejs/adapter-auto": "^3.0.0",
+    "@sveltejs/adapter-static": "^3.0.4",
+    "@sveltejs/enhanced-img": "^0.3.4",
+    "@sveltejs/kit": "^2.0.0",
+    "@sveltejs/vite-plugin-svelte": "^4.0.0-next.6",
+    "@types/eslint": "^9.6.0",
+    "autoprefixer": "^10.4.20",
+    "eslint": "^9.0.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-svelte": "^2.36.0",
+    "globals": "^15.0.0",
+    "postcss": "^8.4.45",
+    "prettier": "^3.1.1",
+    "prettier-plugin-svelte": "^3.1.2",
+    "svelte": "^5.0.0-next.1",
+    "tailwindcss": "^3.4.11",
+    "vite": "^5.0.3"
+  },
+  "type": "module",
   "dependencies": {
-    "express": "^4.18.2"
+    "bits-ui": "^0.21.13",
+    "clsx": "^2.1.1",
+    "lucide-svelte": "^0.441.0",
+    "mode-watcher": "^0.4.1",
+    "tailwind-merge": "^2.5.2",
+    "tailwind-variants": "^0.2.1"
   }
 }
